# compiler

./: .gitignore  CMakeLists.txt  README.md  grammar.txt
.github/workflows/: test.yml
examples/: bit_operations.txt  block_expressions.txt  branching.txt  expr_branching.txt  simple_loop.txt  simple_program.txt
include/parser/: ast.hpp  parse.hpp
include/scanner/: token.hpp  tokenize.hpp
include/utility/: ast_allocator.hpp  executor.hpp  storage.hpp  token_utilities.hpp  type_tuple.hpp
include/visitors/: interpreter_visitor.hpp  print_visitor.hpp
src/: main.cpp  rofls.cpp
src/parser/: ast.cpp  parse.cpp
src/scanner/: tokenize.cpp
src/utility/: executor.cpp
src/visitors/: interpreter_visitor.cpp  print_visitor.cpp
tests/: CMakeLists.txt  parse_and_interpret_tests.cpp  parse_tests.cpp  tokenize_tests.cpp
